corrected gaps for mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 @media screen and (max-width: 999px) {
   #root {
       max-width: 420px;
+      gap: 32px;
   }
 }
 
