--- a/src/layouts/content-layout/ContentLayout.css
+++ b/src/layouts/content-layout/ContentLayout.css
@@ -6,7 +6,6 @@
 @media screen and (max-width: 999px) {
     .content-layout {
         flex-direction: column;
-        gap: 10px;
     }
 }
 
